[package]
name = "tpad"
version = "0.3.0"
authors = ["Omnath Mandal"]
edition = "2021"
license = "GPL-3.0-only"
description = "Simple command line todo utility for comfort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
directories = "5.0.1"
indexmap = "2.1.0"


[[bin]]
name = "tpad"
path = "src/main.rs"
